--- a/src/app/views/product/product-detail.component.html
+++ b/src/app/views/product/product-detail.component.html
@@ -5,3 +5,4 @@
 <span>R${{product.price}}</span>
 </div>
 <button (click)="goBack()">Back</button>
+<a [routerLink]="['/products/edit', product.$key]">Back</a>
