--- a/src/app/views/product/product-detail.component.html
+++ b/src/app/views/product/product-detail.component.html
@@ -4,5 +4,5 @@
 <span>{{product.category}}</span>
 <span>R${{product.price}}</span>
 </div>
-<button (click)="goBack()">Back</button>
-<a [routerLink]="['/products/edit', product.$key]">Back</a>
+<button (click)="goBack()">Voltar</button>
+<a [routerLink]="['/products/edit', product.$key]">Editar</a>
