--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -1,36 +1,46 @@
-<div class="container" [hidden]="submitted">
-    <h1>Novo Produto</h1>
-    <form (ngSubmit)="onSubmit()" #productForm="ngForm">
-      <div class="form-group">
-        <label for="name">Nome</label>
-        <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel" />
-        <div [hidden]="name.valid || name.pristine"
-             class="alert alert-danger">
-          Name is required
+<div class="container product-form" [hidden]="submitted">
+    <h1>{{formTitle}}</h1>
+    <md-card>
+      <form (ngSubmit)="onSubmit()" #productForm="ngForm">
+        <div class="form-group">
+          <md-input-container>
+            <input mdInput placeholder="Nome" type="text" id="name" required
+            [(ngModel)]="model.name" name="name" #name="ngModel" (ngModelChange)="onChange($event)" />
+            <div [hidden]="name.valid || name.pristine"
+                 class="alert alert-danger">
+              Name is required
+            </div>
+          </md-input-container>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="category">Categoria</label>
-        <select class="form-control" id="category"
-        required [(ngModel)]="model.category" name="category" #category="ngModel">
-        	<option *ngFor="let cat of categories" [value]="cat">{{cat}}</option>
-        </select>
-        <div [hidden]="category.valid || category.pristine"
-             class="alert alert-danger">
-          Category is required
+        <div class="form-group">
+          <md-select placeholder="Selecione uma opção" id="category" required [(ngModel)]="model.category" name="category" #category="ngModel">
+            <md-option *ngFor="let cat of categories" [value]="cat">{{cat}}</md-option>
+          </md-select>
+          <div [hidden]="category.valid || category.pristine"
+               class="alert alert-danger">
+            Category is required
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="price">Preço</label>
-        <input type="text" class="form-control" id="price" required [(ngModel)]="model.price" name="price" #price="ngModel"/>
-        <div [hidden]="price.valid || price.pristine"
-             class="alert alert-danger">
-          Price is required
+        <div class="form-group">
+          <md-input-container>
+            <input mdInput placeholder="Preço" type="text" id="price" required [(ngModel)]="model.price" name="price" #price="ngModel"/>
+            <div [hidden]="price.valid || price.pristine"
+                 class="alert alert-danger">
+              Price is required
+            </div>
+          </md-input-container>
         </div>
-      </div>
-      <button type="button" class="btn btn-default" (click)="newProduct(); productForm.reset()">Limpar</button>
-      <button type="submit" class="btn btn-success" [disabled]="!productForm.form.valid">Submit</button>
-    </form>
+        <button md-button (click)="goBack()">
+            <md-icon>
+            arrow_back
+            </md-icon>
+            &nbsp;
+            Voltar
+        </button>
+        <button md-raised-button type="button" class="btn btn-default" (click)="newProduct(); productForm.reset()">Limpar</button>
+        <button md-raised-button type="submit" class="btn btn-success" [disabled]="!productForm.form.valid">Submit</button>
+      </form>
+    </md-card>
 </div>
 <div [hidden]="!submitted">
   <h2>Novo Produto Adicionado:</h2>
