--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,9 +1,14 @@
+<div class="container">
+	<h2>Produtos</h2>
 
-<h2>Produtos</h2>
-<ul>
-	<li *ngFor="let product of products">
-		<a [routerLink]="['/products/detail', product.$key]"  class="col-1-4">{{product.name}}</a>
-		<button (click)="removeProduct(product.$key)">Remover</button>
-	</li>
-</ul>
-<a [routerLink]="['/products/create']"  class="col-1-4">Adicionar Produto</a>
+	<md-card *ngFor="let product of products" class="col-md-3">
+		<md-card-title>
+			<a [routerLink]="['/products/detail', product.$key]"  class="col-1-4">{{product.name}}</a>
+		</md-card-title>
+		<md-card-content>
+			<button md-button (click)="removeProduct(product.$key)"><md-icon>delete</md-icon> Remover</button>
+		</md-card-content>
+	</md-card>
+
+	<a md-fab [routerLink]="['/products/create']" class="fixed-floating-btn"><md-icon>add</md-icon></a>
+</div>
