Added google auth

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
 <h1>Painel Principal</h1>
+<button  md-raised-button (click)="login()">Login</button>
+<button  md-raised-button (click)="logout()">Logout</button>
