Angular dojo - category and enhancements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,12 @@
             </md-icon>
             <a class="list-item_link" routerLink="/products" (click)="sidenav.close()">Produtos</a>
           </md-list-item>
+          <md-list-item>
+            <md-icon>
+              kitchen
+            </md-icon>
+            <a class="list-item_link" routerLink="/categories" (click)="sidenav.close()">Categorias</a>
+          </md-list-item>
         </md-list>
       </md-sidenav>
 
