--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,12 @@
             </md-icon>
             <a class="list-item_link" routerLink="/categories" (click)="sidenav.close()">Categorias</a>
           </md-list-item>
+          <md-list-item>
+            <md-icon>
+              kitchen
+            </md-icon>
+            <a class="list-item_link" routerLink="/buildings" (click)="sidenav.close()">Predios</a>
+          </md-list-item>
         </md-list>
       </md-sidenav>
 
