--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -7,6 +7,7 @@
 		</md-card-title>
 		<md-card-content>
 			<button md-button (click)="openDialog(category.$key)"><md-icon>delete</md-icon> Remover</button>
+			<a [routerLink]="['/categories/edit', category.$key]"><md-icon>edit</md-icon> Editar</a>
 		</md-card-content>
 	</md-card>
 
