--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<h1>Painel Principal</h1>
-<button  md-raised-button (click)="login()">Login</button>
-<button  md-raised-button (click)="logout()">Logout</button>
+<div class="container">
+  <h1>Painel Principal</h1>
+  <button  md-raised-button (click)="login()">Login</button>
+  <button  md-raised-button (click)="logout()">Logout</button>
+</div>
