--- a/src/app/building/building-list/building-list.component.html
+++ b/src/app/building/building-list/building-list.component.html
@@ -5,10 +5,10 @@
 		<md-card-title>
 			<a [routerLink]="['/buildings/detail', building.$key]"  class="col-1-4">{{building.name}}</a>
 		</md-card-title>
-		<md-card-content>
+		<md-card-actions layout="row" layout-align="end center">
 			<button md-button (click)="openDialog(building.$key)"><md-icon>delete</md-icon> Remover</button>
-			<a [routerLink]="['/buildings/edit', building.$key]"><md-icon>edit</md-icon> Editar</a>
-		</md-card-content>
+			<button md-button [routerLink]="['/buildings/edit', building.$key]"><md-icon>edit</md-icon> Editar</button>
+		</md-card-actions>
 	</md-card>
 
 	<a md-fab [routerLink]="['/buildings/create']" class="fixed-floating-btn"><md-icon>add</md-icon></a>
