--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -1,14 +1,15 @@
 <div class="container">
 	<h2>Categorias</h2>
 
+
 	<md-card *ngFor="let category of categories" class="col-md-3">
 		<md-card-title>
 			<a [routerLink]="['/categories/detail', category.$key]"  class="col-1-4">{{category.name}}</a>
 		</md-card-title>
-		<md-card-content>
+		<md-card-actions layout="row" layout-align="end center">
 			<button md-button (click)="openDialog(category.$key)"><md-icon>delete</md-icon> Remover</button>
-			<a [routerLink]="['/categories/edit', category.$key]"><md-icon>edit</md-icon> Editar</a>
-		</md-card-content>
+			<button md-button [routerLink]="['/categories/edit', category.$key]"><md-icon>edit</md-icon> Editar</button>
+		</md-card-actions>
 	</md-card>
 
 	<a md-fab [routerLink]="['/categories/create']" class="fixed-floating-btn"><md-icon>add</md-icon></a>
