--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -5,10 +5,10 @@
 		<md-card-title>
 			<a [routerLink]="['/products/detail', product.$key]"  class="col-1-4">{{product.name}}</a>
 		</md-card-title>
-		<md-card-content>
+		<md-card-actions layout="row" layout-align="end center">
 			<button md-button (click)="openDialog(product.$key)"><md-icon>delete</md-icon> Remover</button>
-			<a [routerLink]="['/products/edit', product.$key]"><md-icon>edit</md-icon> Editar</a>
-		</md-card-content>
+			<button md-button [routerLink]="['/products/edit', product.$key]"><md-icon>edit</md-icon> Editar</button>
+		</md-card-actions>
 	</md-card>
 
 	<a md-fab [routerLink]="['/products/create']" class="fixed-floating-btn"><md-icon>add</md-icon></a>
