Inserting space between cards

--- a/src/app/core/styles/_layout.scss
+++ b/src/app/core/styles/_layout.scss
@@ -9,6 +9,14 @@ md-sidenav {
     }
 }
 
+md-card {
+  margin: 1%;
+
+  @include respond-to('s') {
+    margin: 2%;
+  }
+}
+
 md-select {
   width: 100%;
 }
