--- a/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
+++ b/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
@@ -3,8 +3,11 @@
 
 	<md-card *ngFor="let dailyMenu of dailyMenus" class="col-md-3">
 		<md-card-title>
-			<a [routerLink]="['/daily-menus/detail', dailyMenu.$key]"  class="col-1-4">{{dailyMenu.date}}</a>
+			<a [routerLink]="['/daily-menus/detail', dailyMenu.$key]"  class="col-1-4">{{dailyMenu.date| date: 'dd/MM/yyyy'}}</a>
 		</md-card-title>
+    <md-card-content *ngFor="let side of dailyMenu.sides">
+        {{side}}
+    </md-card-content>
 		<md-card-actions layout="row" layout-align="end center">
 			<button md-button (click)="openDialog(dailyMenu.$key)"><md-icon>delete</md-icon> Remover</button>
 			<button md-button [routerLink]="['/daily-menus/edit', dailyMenu.$key]"><md-icon>edit</md-icon> Editar</button>
