--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -8,7 +8,7 @@
         <md-card-content>
             <md-list>
                 <md-list-item>
-                    <span>{{product.category}}</span>
+                    <span>{{product.category.name}}</span>
                 </md-list-item>
                 <md-list-item>
                     <span>{{product.price | currency:'BRL':true}}</span>
