--- a/src/app/category/category-form/category-form.component.html
+++ b/src/app/category/category-form/category-form.component.html
@@ -12,6 +12,22 @@
             </div>
           </md-input-container>
         </div>
+        <div class="form-group">
+          <md-checkbox
+                [(ngModel)]="model.isVisible" name="isVisible"
+                 ng-false-value="'false'"
+                class="md-warn md-align-top-left" flex>
+              Visivel no cardápio
+          </md-checkbox>
+        </div>
+        <div class="form-group">
+          <md-checkbox
+                [(ngModel)]="model.allowMultiple"  name="allowMultiple"
+                ng-false-value="'false'"
+                class="md-warn md-align-top-left" flex>
+              Permitir multiplos valores no cardápio
+          </md-checkbox>
+        </div>
         <button md-button (click)="goBack()">
             <md-icon>
             arrow_back
